# patientplatypus6.github.io

./: Cargo.toml  index.html  push.sh
docs/: index.html  yew_page-179fb0fea3926c30.js  yew_page-179fb0fea3926c30_bg.wasm  yew_page-1d1e86727ef2eda2.js  yew_page-226b6205c647ee48.js  yew_page-226b6205c647ee48_bg.wasm  yew_page-22c16bb36e8c6396.js  yew_page-22c16bb36e8c6396_bg.wasm  yew_page-237ef7ff78bb32be_bg.wasm  yew_page-24be3e88b350d935.js  yew_page-2565052ac1fe9df1.js  yew_page-266b5ebcb031a26c.js  yew_page-2fccf9594c1e4583_bg.wasm  yew_page-43f30f4830ff28f6_bg.wasm  yew_page-4453cbf308e48881.js  yew_page-4453cbf308e48881_bg.wasm  yew_page-4dfec08f06a5186f.js  yew_page-4dfec08f06a5186f_bg.wasm  yew_page-68ff222935484c31.js  yew_page-6c44faab8a8a5f98.js  yew_page-700555ad4a9c86ca_bg.wasm  yew_page-703ffa8bdaa7a884.js  yew_page-703ffa8bdaa7a884_bg.wasm  yew_page-827f0248d0300625_bg.wasm  yew_page-85c5f14fff570aab.js  yew_page-85c5f14fff570aab_bg.wasm  yew_page-89a882a024dcd3b8.js  yew_page-a75bfab59f95f6fb.js  yew_page-b35a85697779f9df.js  yew_page-b35a85697779f9df_bg.wasm  yew_page-b5d8028336de0a5e.js  yew_page-b5d8028336de0a5e_bg.wasm  yew_page-b76ca5a87c5bb633.js  yew_page-b76ca5a87c5bb633_bg.wasm  yew_page-baeb16eedbc57ed9.js  yew_page-baeb16eedbc57ed9_bg.wasm  yew_page-caeee43a9bf4969f_bg.wasm  yew_page-cd05e623b3c0a3ec_bg.wasm  yew_page-e231e1daaf2b0aa1.js  yew_page-e231e1daaf2b0aa1_bg.wasm  (+4 more)
src/: lib.rs  main.rs
src/books/: academic.rs  classical.rs  historybooks.rs  literature.rs  mod.rs  philosophy.rs  politics.rs  religion.rs  scififantasy.rs
(+37 files in other folders)
