[package]
name = "yew_page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
reqwest = { version = "0.11.14", features = ["json"] }
wasm-logger = "0.2.0"
log = "0.4.17"
gloo-net = "0.2.5"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"
js-sys = "0.3.61"
yew-style-in-rs = "0.4.1"
serde_json = "1.0.94"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
tokio = { version = "1.26.0", features = ["time"] }
yew-canvas = "0.2.4"
gloo = "0.8.0"
futures = "^0.3"
futures-timer = "^0.3"
stdweb = "0.4.20"
ymc = { version = "0.1", features = ["full"] }
material-yew = "0.2"
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  'HtmlCanvasElement',
  'HtmlElement',
  'CanvasRenderingContext2d',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'DragEvent', 
  'Element', 
  'DomRect',
  'MouseEvent', 
  'HtmlImageElement',
  'IntersectionObserver',
  'IntersectionObserverEntry',
  'MutationObserver',
  'CustomEvent'
]
